--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -59,6 +59,7 @@
 @import components/user-form
 @import components/user-options
 @import components/bitrix-search
+@import components/pagination-2
 @import components/feature-list
 @import components/scroll-nav
 @import components/top-panel
@@ -71,6 +72,7 @@
 @import components/products-list
 @import components/catalog-menu
 @import components/view-switcher
+@import components/news-list
 @import components/map-site
 @import components/product-card
 
