--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -64,7 +64,7 @@ $text-color-alt: #fabb00 !default
 // цвет ссылки
 $link-color: #0099ff !default
 // цвет линий и границ
-$border-color: #999 !default
+$border-color: #ccc !default
 // цвет специальных элементов
 $mark-color: tomato !default
 // цвет контурных элементов
