--- a/src/sass/base/_typography.sass
+++ b/src/sass/base/_typography.sass
@@ -184,6 +184,11 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em
 .nobr
 	white-space: nowrap
 
+.heading
+	h1, h2, h3
+		+display-inline-block-middle
+		margin-right: 50px
+
 
 /*content img*/
 .imgc
