--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -73,6 +73,7 @@
 @import components/catalog-menu
 @import components/view-switcher
 @import components/news-list
+@import components/years
 @import components/map-site
 @import components/product-card
 
