--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -26,6 +26,7 @@
 /*TYPOGRAPHY*/
 /*======================================================*/
 @import base/typography
+@import components/depicts
 @import components/buttons
 @import partials/forms-default
 @import partials/forms-light
