--- a/src/sass/components/_years.sass
+++ b/src/sass/components/_years.sass
@@ -18,6 +18,7 @@ $year-item-width: 90px
 		height: $year-item-height
 		min-width: $year-item-width
 		margin-left: -1px
+		margin-top: -1px
 		+font(14px, #{$year-item-height - 2})
 		color: $text-color
 		letter-spacing: normal
@@ -28,7 +29,12 @@ $year-item-width: 90px
 		-webkit-transition-property: border-color, background-color
 		transition-property: border-color, background-color
 
-		&.active
+		&.active, .no-touchevents &.active:hover
+			background-color: $base-color
+			border-top-color: $base-color
+			border-bottom-color: $base-color
+
+		.ea-site &.active, .no-touchevents .ea-site &.active:hover
 			background-color: $base-color--ea
 			border-top-color: $base-color--ea
 			border-bottom-color: $base-color--ea
