--- a/src/sass/components/_products-options.sass
+++ b/src/sass/components/_products-options.sass
@@ -30,6 +30,13 @@
 	text-align: center
 	flex: 3 3 100px
 
+	+media('<tab-lg')
+		flex: 1 1 100px
+
+		&:nth-last-child(2)
+			text-align: right
+			flex: 1 1 100px
+
 	&:first-child
 		text-align: left
 		flex: 1 1 100px
@@ -55,6 +62,10 @@
 	.view-switcher
 		+display-inline-block-top
 
+.view-switcher-wrap
+	+media('<tab-lg')
+		display: none
+
 .p-options__inner
 	position: relative
 
@@ -64,6 +75,12 @@
 	align-items: center
 	user-select: none
 	text-align: left
+
+	+media('<tab-lg')
+		justify-content: flex-end
+
+	+media('<tab-sm')
+		justify-content: center
 
 	& > small
 		+font(inherit, inherit)
